--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<hibernate.version>4.1.9.Final</hibernate.version>
 		<junit-version>4.12</junit-version>
 		<mockito-version>1.10.19</mockito-version>
+		<dbcp2.version>2.1</dbcp2.version>
 	</properties>
 
 	<dependencies>
@@ -81,23 +82,29 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.hibernate</groupId> -->
-<!-- 			<artifactId>hibernate-core</artifactId> -->
-<!-- 			<version>${hibernate.version}</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.hibernate</groupId> -->
-<!-- 			<artifactId>hibernate-entitymanager</artifactId> -->
-<!-- 			<version>${hibernate.version}</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
 
 		<dependency>
-			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa-all</artifactId>
-			<version>2.4.0</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.version}</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${dbcp2.version}</version>
+        </dependency>
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.openjpa</groupId> -->
+<!-- 			<artifactId>openjpa-all</artifactId> -->
+<!-- 			<version>2.4.0</version> -->
+<!-- 		</dependency> -->
 		
 		<dependency>
 			<groupId>mysql</groupId>
