--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,6 +28,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>fuelup-core</servlet-name>
-		<url-pattern>/rest</url-pattern>
+		<url-pattern>/rest/v1/*</url-pattern>
 	</servlet-mapping>
 </web-app>
